--- a/menu/waffle.html
+++ b/menu/waffle.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waffle</title>
+    <link rel="stylesheet" href="../style.css">
     <style>
         body {
             font-family: 'Segoe UI', Arial, sans-serif;
@@ -12,24 +13,30 @@
             padding: 0;
             min-height: 100vh;
         }
+
         h1 {
             text-align: center;
             color: #d72660;
             margin-top: 40px;
             font-size: 2.5rem;
         }
+
         h2 {
             text-align: center;
             color: #d72660;
             margin-top: 32px;
             font-size: 1.5rem;
         }
-        img {
+
+        .recipe-img {
             display: block;
             margin: 0 auto 24px auto;
+            max-width: 400px;
+            width: 90%;
             border-radius: 16px;
             box-shadow: 0 2px 16px rgba(215,38,96,0.10);
         }
+
         ul, ol {
             max-width: 500px;
             margin: 0 auto 24px auto;
@@ -39,19 +46,23 @@
             padding: 20px 32px;
             font-size: 1.1rem;
         }
+
         li {
             margin-bottom: 10px;
         }
+
         p {
             max-width: 600px;
             margin: 0 auto 18px auto;
             font-size: 1.15rem;
             color: #333;
+            padding: 0 15px;
         }
-        a {
+
+        .back-btn {
             display: block;
-            width: 120px;
-            margin: 32px auto 0 auto;
+            width: 140px;
+            margin: 32px auto 40px auto;
             padding: 12px 0;
             background: #d72660;
             color: #fff;
@@ -62,7 +73,8 @@
             box-shadow: 0 2px 8px rgba(215,38,96,0.10);
             transition: background 0.2s, color 0.2s;
         }
-        a:hover {
+
+        .back-btn:hover {
             background: #fff;
             color: #d72660;
             border: 1px solid #d72660;
@@ -71,9 +83,11 @@
 </head>
 <body>
     <h1>Waffle</h1>
-    <img src="https://imgs.search.brave.com/SntI7mve7Xn03rLfpKENWDFYlZHOS9FdQn4wJUzyscc/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy90/aHVtYi81LzViL1dh/ZmZsZXNfd2l0aF9T/dHJhd2JlcnJpZXMu/anBnLzUxMnB4LVdh/ZmZsZXNfd2l0aF9T/dHJhd2JlcnJpZXMu/anBn" alt="Waffle" style="max-width:400px;display:block;margin-bottom:16px;">
+    <img src="https://imgs.search.brave.com/SntI7mve7Xn03rLfpKENWDFYlZHOS9FdQn4wJUzyscc/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy90/aHVtYi81LzViL1dh/ZmZsZXNfd2l0aF9T/dHJhd2JlcnJpZXMu/anBnLzUxMnB4LVdh/ZmZsZXNfd2l0aF9T/dHJhd2JlcnJpZXMu/anBn" alt="Waffle" class="recipe-img">
+
     <p>Waffles are a classic breakfast favorite, known for their crisp exterior and fluffy interior. They are perfect for holding syrup, fruit, or whipped cream in their signature pockets.</p>
     <p>Enjoyed around the world, waffles can be sweet or savory and are easy to make at home with a few simple ingredients. Serve them hot for a comforting and delicious meal.</p>
+
     <h2>Ingredients</h2>
     <ul>
         <li>2 cups all-purpose flour</li>
@@ -85,6 +99,7 @@
         <li>1/2 cup melted butter</li>
         <li>1 teaspoon vanilla extract</li>
     </ul>
+
     <h2>Steps</h2>
     <ol>
         <li>Preheat your waffle iron according to the manufacturer's instructions.</li>
@@ -94,6 +109,7 @@
         <li>Lightly grease the waffle iron and pour in the batter.</li>
         <li>Cook until golden brown and crisp. Serve warm with your favorite toppings.</li>
     </ol>
-    <a href="../index.html">Home</a>
+
+    <a href="../index.html" class="back-btn">← Back to Menu</a>
 </body>
 </html>
