--- a/menu/cheesecake.html
+++ b/menu/cheesecake.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheesecake</title>
+    <link rel="stylesheet" href="../style.css">
     <style>
         body {
             font-family: 'Segoe UI', Arial, sans-serif;
@@ -12,29 +13,30 @@
             padding: 0;
             min-height: 100vh;
         }
+
         h1 {
             text-align: center;
             color: #d72660;
             margin-top: 40px;
             font-size: 2.5rem;
         }
+
         h2 {
             text-align: center;
             color: #d72660;
             margin-top: 32px;
             font-size: 1.5rem;
         }
-        img {
+
+        .recipe-img {
             display: block;
             margin: 0 auto 24px auto;
+            max-width: 400px;
+            width: 90%;
             border-radius: 16px;
             box-shadow: 0 2px 16px rgba(215,38,96,0.10);
         }
-        h2 {
-            color: #d72660;
-            margin-top: 32px;
-            font-size: 1.5rem;
-        }
+
         ul, ol {
             max-width: 500px;
             margin: 0 auto 24px auto;
@@ -44,19 +46,23 @@
             padding: 20px 32px;
             font-size: 1.1rem;
         }
+
         li {
             margin-bottom: 10px;
         }
+
         p {
             max-width: 600px;
             margin: 0 auto 18px auto;
             font-size: 1.15rem;
             color: #333;
+            padding: 0 15px;
         }
-        a {
+
+        .back-btn {
             display: block;
-            width: 120px;
-            margin: 32px auto 0 auto;
+            width: 140px;
+            margin: 32px auto 40px auto;
             padding: 12px 0;
             background: #d72660;
             color: #fff;
@@ -67,7 +73,8 @@
             box-shadow: 0 2px 8px rgba(215,38,96,0.10);
             transition: background 0.2s, color 0.2s;
         }
-        a:hover {
+
+        .back-btn:hover {
             background: #fff;
             color: #d72660;
             border: 1px solid #d72660;
@@ -76,9 +83,11 @@
 </head>
 <body>
     <h1>Cheesecake</h1>
-    <img src="https://imgs.search.brave.com/6d5kujNJzNx9hbLjrzus078P1lgTb-ENuZ2sHR-apRs/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly93d3cu/c2ltcGx5cmVjaXBl/cy5jb20vdGhtYi9F/blJ0OXdndk5BNkFk/VWloUWJIV3JaUEhQ/dEU9LzE1MDB4MC9m/aWx0ZXJzOm5vX3Vw/c2NhbGUoKTptYXhf/Ynl0ZXMoMTUwMDAw/KTpzdHJpcF9pY2Mo/KS9TaW1wbHktUmVj/aXBlcy1QZXJmZWN0/LUNoZWVzZWNha2Ut/TUVUSE9ELTE0LWU3/NTRiNmUwMzcyNDQ3/YThhMjFjOGFjNmJi/YWYxZmVmLmpwZw" alt="Cheesecake" style="max-width:400px;display:block;margin-bottom:16px;">
+    <img src="https://imgs.search.brave.com/6d5kujNJzNx9hbLjrzus078P1lgTb-ENuZ2sHR-apRs/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly93d3cu/c2ltcGx5cmVjaXBl/cy5jb20vdGhtYi9F/blJ0OXdndk5BNkFk/VWloUWJIV3JaUEhQ/dEU9LzE1MDB4MC9m/aWx0ZXJzOm5vX3Vw/c2NhbGUoKTptYXhf/Ynl0ZXMoMTUwMDAw/KTpzdHJpcF9pY2Mo/KS9TaW1wbHktUmVj/aXBlcy1QZXJmZWN0/LUNoZWVzZWNha2Ut/TUVUSE9ELTE0LWU3/NTRiNmUwMzcyNDQ3/YThhMjFjOGFjNmJi/YWYxZmVmLmpwZw" alt="Cheesecake" class="recipe-img">
+
     <p>Cheesecake is a rich and creamy dessert with a smooth texture and a deliciously sweet flavor. It is often made with a base of cream cheese, eggs, and sugar, set atop a buttery graham cracker crust.</p>
     <p>This classic dessert is perfect for special occasions or as a delightful treat any time of year. You can top it with fresh fruit, chocolate, or your favorite sauce for extra indulgence.</p>
+
     <h2>Ingredients</h2>
     <ul>
         <li>1 1/2 cups graham cracker crumbs</li>
@@ -89,6 +98,7 @@
         <li>1 teaspoon vanilla extract</li>
         <li>1 cup sour cream</li>
     </ul>
+
     <h2>Steps</h2>
     <ol>
         <li>Preheat your oven to 325°F (163°C). Grease a 9-inch springform pan.</li>
@@ -96,8 +106,9 @@
         <li>In a bowl, beat cream cheese and sugar until smooth. Add eggs one at a time, mixing well after each.</li>
         <li>Stir in vanilla extract and sour cream until combined.</li>
         <li>Pour the filling over the crust and smooth the top.</li>
-        <li>Bake for 50-60 minutes, or until the center is almost set. Let cool, then refrigerate for at least 4 hours before serving.</li>
+        <li>Bake for 50–60 minutes, or until the center is almost set. Let cool, then refrigerate for at least 4 hours before serving.</li>
     </ol>
-    <a href="../index.html">Home</a>
+
+    <a href="../index.html" class="back-btn">← Back to Menu</a>
 </body>
 </html>
